Update Carousel Loader

--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@
 		<!--<![endif]-->
 		<script src="libs/fastclick.min.js"></script>
 		<script src="libs/flexslider/jquery.flexslider-min.js"></script>
+		<script src="libs/imagesloaded.pkgd.min.js"></script>
 		<script src="libs/jquery.html5-placeholder-shim.js"></script>
 		<script src="libs/ScrollMagic.min.js"></script>
 		<script src="libs/debug.addIndicators.min.js"></script>
